# SnipText

./: CMakeLists.txt  README.md  capturesession.cpp  capturesession.h  mainwindow.cpp  mainwindow.h  ocrservice.cpp  ocrservice.h  selectionoverlay.cpp  selectionoverlay.h
